<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView
        android:id="@+id/ui_main_deviceStatusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status text" />-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="Status:"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="&lt;Bluetooth Status>"
            android:id="@+id/ui_main_deviceStatusTv"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_centerHorizontal="true"
             />
    </LinearLayout>


    <Button
        android:id="@+id/secure_connect_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secure_connect" />

    <Button
        android:id="@+id/insecure_connect_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/insecure_connect" />

    <Button
        android:id="@+id/discoverable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:showAsAction="ifRoom|withText"
        android:text="@string/discoverable" />

    <ListView
        android:id="@+id/lvMainChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:inputType="none" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>